<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/painel"
            android:title="@string/label_painel">
        <!--  Vai mostrar os meus ultimos dados, malta ultimos pagamentos, ultimos gastos e tal-->
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/profile"
                        android:title="@string/label_profile"
                        android:icon="@drawable/ic_account">

                    </item>

                <item android:id="@+id/mydatas"
                    android:title="@string/label_mydatas"
                    android:icon="@drawable/ic_data_usage">

                </item>


                <item android:id="@+id/breakdown"
                    android:title="@string/label_breakdown"
                    android:icon="@drawable/ic_adjust">

                </item>
                </group>
            </menu>
        </item>



        <item android:id="@+id/recharger"
            android:title="@string/label_recharger">
            <menu>
                <group android:checkableBehavior="single">
                <item android:id="@+id/create_recharger"
                    android:title="@string/label_create_recharger"
                    android:icon="@drawable/ic_credit_card_black_24dp">
                </item>

                <item android:id="@+id/second_copy"
                    android:title="@string/label_second_copy"
                    android:icon="@drawable/ic_copy">
                </item>
                </group>
            </menu>
        </item>

    <item android:id="@+id/add"
        android:title="@string/label_client_add">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/add_client"
                    android:title="@string/label_cliente"
                    android:icon="@drawable/ic_person_black_24dp">
                </item>
                <item
                    android:id="@+id/add_employee"
                    android:title="@string/label_employee"
                    android:icon="@drawable/ic_person_black_24dp">
                </item>
                <item
                    android:id="@+id/add_billing"
                    android:title="@string/label_billing"
                    android:icon="@drawable/ic__description_24">
                </item>
                <item
                    android:id="@+id/add_Payments"
                    android:title="@string/label_payments"
                    android:icon="@drawable/ic_monetization_on_24">
                </item>

                <item
                    android:id="@+id/add_suspension"
                    android:title="@string/label_suspension"
                    android:icon="@drawable/ic_remove_24">
                </item>

            </group>
        </menu>
    </item>

    <item android:id="@+id/view"
        android:title="@string/label_view">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/view_client"
                    android:title="@string/label_view_client"
                    android:icon="@drawable/ic_view_list_24">
                </item>
                <item
                    android:id="@+id/view_employee"
                    android:title="@string/label_view_employee"
                    android:icon="@drawable/ic_view_list_24">
                </item>
                <item
                    android:id="@+id/view_billing"
                    android:title="@string/label_view_billing"
                    android:icon="@drawable/ic_view_list_24">
                </item>
                <item
                    android:id="@+id/view_Payments"
                    android:title="@string/label_view_payments"
                    android:icon="@drawable/ic_view_list_24">
                </item>

                <item
                    android:id="@+id/view_suspension"
                    android:title="@string/label_view_suspension"
                    android:icon="@drawable/ic_view_list_24">
                </item>

            </group>
        </menu>
    </item>

    <item android:id="@+id/info"
        android:title="@string/label_info">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/info_about"
                    android:title="@string/label_info_about"
                    android:icon="@drawable/ic_info_24">
                </item>
                <item
                    android:id="@+id/info_exit"
                    android:title="@string/label_info_exit"
                    android:icon="@drawable/ic_info_24">
                </item>
            </group>
        </menu>
    </item>
</menu>