<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recharger.BuyRecharger">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/label_buy_recharger"
                android:textStyle="bold"
                android:id="@+id/title"
                android:layout_marginBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/title"
                android:paddingTop="5dp"
                android:layout_marginStart="15dp"
                android:id="@+id/separator"
                android:layout_marginEnd="15dp"
                android:background="@color/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/water_counter"
                android:layout_below="@+id/separator"
                android:hint="@string/label_amount_recharger"
                android:layout_margin="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_recharger_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_payment_method"
                android:layout_below="@+id/water_counter"
                android:id="@+id/txt_payment"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                android:gravity="center"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_payment"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@id/txt_payment">

                <RadioButton
                    android:id="@+id/rdbtn_Mpesa"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_mpesa"/>

                <RadioButton
                    android:id="@+id/rdbtn_credit_card"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_credit_card"/>


            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_number"
                android:layout_below="@+id/group_payment"
                android:hint="@string/label_account_number"
                android:layout_margin="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:text="@string/label_buy"
                android:textStyle="bold"
                android:layout_below="@+id/account_number"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>