<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".client.datas.profile.ClientContactFragment">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/relative">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/label_contact_information"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/colorViewSeparator"
        android:layout_below="@+id/relative"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                >

                <ImageView
                    android:id="@+id/ic_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_email"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/txt_email"
                    app:layout_constraintLeft_toRightOf="@+id/ic_email"/>
                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_email"
                    app:layout_constraintLeft_toRightOf="@+id/ic_email"
                    app:layout_constraintTop_toBottomOf="@+id/label_email"
                    />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/colorViewSeparator"
                    app:layout_constraintStart_toStartOf="@+id/label_email"
                    app:layout_constraintTop_toBottomOf="@+id/txt_email"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_email"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ic_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_phone"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/label_tel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/label_tel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/txt_tel"
                    app:layout_constraintLeft_toRightOf="@+id/ic_phone" />

                <TextView
                    android:id="@+id/txt_tel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/ic_phone"
                    app:layout_constraintTop_toBottomOf="@+id/label_tel" />

                <TextView
                    android:id="@+id/txt_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/ic_phone"
                    app:layout_constraintTop_toBottomOf="@+id/txt_tel" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/colorViewSeparator"
                    app:layout_constraintStart_toStartOf="@+id/label_tel"
                    app:layout_constraintTop_toBottomOf="@+id/txt_contact"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_contact"
                android:paddingTop="10dp"
                android:id="@+id/constraint_button"
                android:paddingBottom="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_next"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/rounded_button"
                    android:text="@string/button_next"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_previous"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toStartOf="@id/btn_next"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/rounded_button"
                    android:text="@string/button_previous"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>